<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="settings_my_tag"
        android:title="@string/pref_my_tag_title"
        android:defaultValue="@string/pref_my_tag_default"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="settings_about_me"
        android:title="@string/pref_about_me_title"
        android:defaultValue="@string/pref_about_me_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapSentences"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
